# BiliAgent

./: .dockerignore  .env.example  .gitignore  .gitmodules  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml  roadmap.md
deploy/: nginx.conf  setup.sh
src/biliagent/: config.py  main.py
src/biliagent/agents/: __init__.py  analyzer.py  qa.py  reply.py  summarizer.py  supervisor.py  verifier.py  verify_cache_judge.py
src/biliagent/api/: routes.py
src/biliagent/graph/: state.py  workflow.py
src/biliagent/models/: schemas.py
src/biliagent/prompts/: analyzer.txt  qa.txt  qa_direct.txt  reply.txt  summarizer.txt  summarizer_map.txt  summarizer_reduce.txt  supervisor.txt  verifier.txt  verify_cache_judge.txt
src/biliagent/rag/: __init__.py  chunker.py  indexer.py  vectorstore.py
src/biliagent/services/: transcriber.py
src/biliagent/storage/: cache.py  database.py  verify_cache.py
tests/test_agents/: test_analyzer.py  test_qa.py  test_reply.py  test_summarizer.py  test_supervisor.py
tests/test_graph/: test_follower_check.py  test_workflow.py
tests/test_platforms/: test_bilibili_client.py
tests/test_rag/: test_chunker.py  test_indexer.py  test_map_reduce.py  test_vectorstore.py
tests/test_services/: test_transcriber.py
