[project]
name = "biliagent"
version = "0.1.0"
description = "Multi-agent Bilibili video summarization bot"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langchain>=1.0.1",
    "langgraph>=1.0.1",
    "langchain-openai",
    "fastapi",
    "uvicorn[standard]",
    "bilibili-api-python",
    "sqlalchemy",
    "aiosqlite",
    "pydantic>=2.0",
    "pydantic-settings",
    "httpx",
    "python-dotenv",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/biliagent"]
